search query fixed, dark mode for job detail fixed

--- a/src/components/JobDetail.css
+++ b/src/components/JobDetail.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
 }
+
 .jobHeading {
     display: flex;
     flex-direction: row;
@@ -14,6 +15,9 @@
     margin-bottom: 20px;
     background-color: #FFF;
     width: 500px;
+}
+.jobDetail.darkMode .jobHeading {   
+    background-color: #131822;
 }
 .jobHeading .companyLogo {
     width: 90px;
@@ -26,6 +30,9 @@
     flex-direction: column;
     padding: 0 90px 0 30px;
 
+}
+.jobDetail.darkMode .companyName {   
+    color: #FFF;
 }
 .jobHeading .companyURL {
     font-weight: 700;
@@ -51,6 +58,9 @@
     background-color: #FFF;
     width: 500px;
 }
+.jobDetail.darkMode .jobDetails {   
+    background-color: #131822;
+}
 .jobDetails .timeWithType {
     color: #777777;
     font-size: 15px;
@@ -73,6 +83,9 @@
     font-weight: bold;
     padding: 5px 0;
     min-height: 20px;
+}
+.jobDetail.darkMode .jobDetails .position {
+    color: #FFF;
 }
 .jobDetails .basicInfo {
     display: flex; 
